[tool.poetry]
name = "massagents"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"




[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
openai = "^1.16.1"
langchain = "^0.1.14"
erniebot = "^0.5.3"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.5"
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.2"
pytest = "^8.1.1"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"
